--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,251 +1,284 @@
 @import '../global/global.scss';
 
-.projects{
+.projects {
 
 	height: 100vh;
 	display: flex;
 	background-image: linear-gradient(180deg, #181823, #181823);
-		@include mob{
-		
+
+	@include mob {
+
 		overflow: hidden;
 
 	}
 
-    .wrapper{
-		
-        display: flex;
-        align-items: center;
-        justify-content: center;
+	.wrapper {
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		flex-direction: column;
 
-        .text{
+		.text {
 			height: 200px;
-            margin-top: 100px;
-            color: #1c1d25;
+			margin-top: 100px;
+			color: #1c1d25;
 			display: flex;
 			align-items: center;
 			justify-content: center;
 			flex-direction: column;
-            h1{
-                color: #1c1d25;
-                font-weight: bold;
+
+			h1 {
+				color: #1c1d25;
+				font-weight: bold;
 				font-size: 5vw;
-				@include ipad{
+
+				@include ipad {
 					font-size: 7vw;
 
 				}
-				@include mob{
+
+				@include mob {
 					font-size: 50px;
 
 				}
-            }
-			h2{
+			}
+
+			h2 {
 				margin-top: 30px;
 				color: darkgray;
-                font-weight: bold;
-                font-size: 25px;
+				font-weight: bold;
+				font-size: 25px;
 			}
-        }
+		}
 
-        .images{
-            display: flex;
-            flex-direction: column;
-               justify-content: center;
-               align-items: center;
-            .image1{
-                height: 100%;
-                width: 100%;
-                overflow: hidden;
-				@include mob{
-					
+		.images {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+
+			.image1 {
+				height: 100%;
+				width: 100%;
+				overflow: hidden;
+
+				@include mob {
+
 					height: 200px;
 				}
-				
-                img{
-                    width: 100%;
-                    height: 100%;
 
-					@include mob{
-						
-					}
-                }
-            }
-			.image2{
-                height: 100%;
-                width: 100%;
-                overflow: hidden;
-				@include mob{
-					
-					height: 200px;
-				}
-				img{
-                    width: 100%;
-                    height: 100%;
-
-					@include mob{
-						
-					}
-                }
-			}
-				.image3{
-					height: 100%;
+				img {
 					width: 100%;
-					overflow: hidden;
-					@include mob{
-						
-						height: 200px;
-					}
-					img{
-						width: 100%;
-						height: 100%;
-	
-						@include mob{
-							
-						}
-					}
+					height: 100%;
+
+					@include mob {}
 				}
-        }
-    }
+			}
+
+			.image2 {
+				height: 100%;
+				width: 100%;
+				overflow: hidden;
+
+				@include mob {
+
+					height: 200px;
+				}
+
+				img {
+					width: 100%;
+					height: 100%;
+
+					@include mob {}
+				}
+			}
+
+			.image3 {
+				height: 100%;
+				width: 100%;
+				overflow: hidden;
+
+				@include mob {
+
+					height: 200px;
+				}
+
+				img {
+					width: 100%;
+					height: 100%;
+
+					@include mob {}
+				}
+			}
+		}
+	}
 }
-.x{
-				color: darkgray;
+
+.x {
+	color: darkgray;
 
 }
-.iconDiv1{
-	display:flex;
+
+.iconDiv1 {
+	display: flex;
 	flex-direction: column;
 	width: 40vw;
 	margin-bottom: 90px;
-	@include ipad{
+
+	@include ipad {
 		width: 60vw;
-		}
-	@include mob{
-	width: 300px;
 	}
 
-	.tools{
+	@include mob {
+		width: 300px;
+	}
+
+	.tools {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-         font-weight: bold;
-         
-		 margin-bottom: 1vw;
-		 @include responsive-font(9);
-		 h2{
+		font-weight: bold;
+
+		margin-bottom: 1vw;
+		@include responsive-font(9);
+
+		h2 {
 			color: darkgray;
 
-		 }
+		}
 	}
-	.iconUsed{
+
+	.iconUsed {
 		display: flex;
 		justify-content: space-between;
 	}
-.icon1{
-	cursor: none;
-	width: 2vw;
-	height: 2vw;
-	fill:#f06529;
-	@include ipad{
-		width: 5vw;
-		height: 5vw;
-		}
-	@include mob{
-		width: 10vw;
-	height: 10vw;
-		}
-}
-.icon2{
-	cursor: none;
 
-	width: 2vw;
-	height: 2vw;
-	fill:#2965f1;
-	@include ipad{
-		width: 5vw;
-		height: 5vw;
-		}
-	@include mob{
-		width: 10vw;
-		height: 10vw;
-		}
-}
-.icon3{
-	cursor: none;
+	.icon1 {
+		cursor: none;
+		width: 2vw;
+		height: 2vw;
+		fill: #f06529;
 
-	width: 2vw;
-	height: 2vw;
-	fill:#61dbfb;
-	@include ipad{
-		width: 5vw;
-		height: 5vw;
-		}
-	@include mob{
-		width: 10vw;
-	height: 10vw;
-		}
-}
-.icon4{
-	cursor: none;
-	width: 2vw;
-	height: 2vw;
-	fill:#563d7c;
-	@include ipad{
-		width: 5vw;
-		height: 5vw;
-		}
-	@include mob{
-		width: 10vw;
-		height: 10vw;
-		}
-}
-.icon5{
-	cursor: none;
-	width: 2vw;
-	height: 2vw;
-	fill:#F0DB4F;
-	@include ipad{
-		width: 5vw;
-		height: 5vw;
-		}
-	@include mob{
-		width: 10vw;
-	height: 10vw;
-		}
-}
-.icon6{
-	cursor: none;
-	width: 2vw;
-	height: 2vw;
-	fill:#fb503b;
-	@include ipad{
-		width: 5vw;
-		height: 5vw;
-		}
-	@include mob{
-		width: 10vw;
-		height: 10vw;
-		}
-}
-.icon7{
-	cursor: none;
-	width: 2vw;
-	height: 2vw;
-	fill: #0868AC;
-	@include ipad{
-		width: 5vw;
-		height: 5vw;
+		@include ipad {
+			width: 5vw;
+			height: 5vw;
 		}
 
-	@include mob{
-		width: 10vw;
-		height: 10vw;
+		@include mob {
+			width: 10vw;
+			height: 10vw;
 		}
-}
+	}
+
+	.icon2 {
+		cursor: none;
+
+		width: 2vw;
+		height: 2vw;
+		fill: #2965f1;
+
+		@include ipad {
+			width: 5vw;
+			height: 5vw;
+		}
+
+		@include mob {
+			width: 10vw;
+			height: 10vw;
+		}
+	}
+
+	.icon3 {
+		cursor: none;
+
+		width: 2vw;
+		height: 2vw;
+		fill: #61dbfb;
+
+		@include ipad {
+			width: 5vw;
+			height: 5vw;
+		}
+
+		@include mob {
+			width: 10vw;
+			height: 10vw;
+		}
+	}
+
+	.icon4 {
+		cursor: none;
+		width: 2vw;
+		height: 2vw;
+		fill: #563d7c;
+
+		@include ipad {
+			width: 5vw;
+			height: 5vw;
+		}
+
+		@include mob {
+			width: 10vw;
+			height: 10vw;
+		}
+	}
+
+	.icon5 {
+		cursor: none;
+		width: 2vw;
+		height: 2vw;
+		fill: #F0DB4F;
+
+		@include ipad {
+			width: 5vw;
+			height: 5vw;
+		}
+
+		@include mob {
+			width: 10vw;
+			height: 10vw;
+		}
+	}
+
+	.icon6 {
+		cursor: none;
+		width: 2vw;
+		height: 2vw;
+		fill: #fb503b;
+
+		@include ipad {
+			width: 5vw;
+			height: 5vw;
+		}
+
+		@include mob {
+			width: 10vw;
+			height: 10vw;
+		}
+	}
+
+	.icon7 {
+		cursor: none;
+		width: 2vw;
+		height: 2vw;
+		fill: #0868AC;
+
+		@include ipad {
+			width: 5vw;
+			height: 5vw;
+		}
+
+		@include mob {
+			width: 10vw;
+			height: 10vw;
+		}
+	}
 }
 
 
 .grid {
-    overflow: hidden;
+	overflow: hidden;
 	position: relative;
 	clear: both;
 	margin: 0 auto;
@@ -279,30 +312,33 @@
 }
 
 .grid figure figcaption {
-    overflow-y: hidden;
+	overflow-y: hidden;
 	padding: 2em;
 	color: #fff;
 	text-transform: uppercase;
 	font-size: 1.25em;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
-	@include mob{
+
+	@include mob {
 		display: flex;
 		align-items: center;
 		justify-content: flex-start;
-		padding-left:5px ;
+		padding-left: 5px;
 		padding-top: 65px;
-	  }
+	}
 }
-.port{
-	@include mob{
-		margin-left: 35px;        
-		  }
+
+.port {
+	@include mob {
+		margin-left: 35px;
+	}
 }
-.clock{
-	@include mob{
-		margin-left: 20px;        
-		  }
+
+.clock {
+	@include mob {
+		margin-left: 20px;
+	}
 }
 
 .grid figure figcaption::before,
@@ -311,7 +347,7 @@
 }
 
 .grid figure figcaption,
-.grid figure figcaption > a {
+.grid figure figcaption>a {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -321,7 +357,7 @@
 
 /* Anchor will cover the whole item by default */
 /* For some effects it will show as a button */
-.grid figure figcaption > a {
+.grid figure figcaption>a {
 	z-index: 1000;
 	text-indent: 200%;
 	white-space: nowrap;
@@ -332,14 +368,15 @@
 .grid figure h2 {
 	word-spacing: -0.15em;
 	font-weight: 300;
-	@include mob{
-		margin-right: 50px;        
-		  }
+
+	@include mob {
+		margin-right: 50px;
+	}
 }
 
 .grid figure h2 span {
 	font-weight: 800;
-	
+
 }
 
 .grid figure h2,
@@ -359,12 +396,12 @@ figure.effect-apollo {
 }
 
 figure.effect-apollo img {
-	
+
 	opacity: 0.95;
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: scale3d(1.05,1.05,1);
-	transform: scale3d(1.05,1.05,1);
+	-webkit-transform: scale3d(1.05, 1.05, 1);
+	transform: scale3d(1.05, 1.05, 1);
 }
 
 figure.effect-apollo figcaption::before {
@@ -373,12 +410,12 @@ figure.effect-apollo figcaption::before {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(255,255,255,0.5);
+	background: rgba(255, 255, 255, 0.5);
 	content: '';
 	-webkit-transition: -webkit-transform 0.6s;
 	transition: transform 0.6s;
-	-webkit-transform: scale3d(1.9,1.4,1) rotate3d(0,0,1,45deg) translate3d(0,-100%,0);
-	transform: scale3d(1.9,1.4,1) rotate3d(0,0,1,45deg) translate3d(0,-100%,0);
+	-webkit-transform: scale3d(1.9, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, -100%, 0);
+	transform: scale3d(1.9, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, -100%, 0);
 }
 
 figure.effect-apollo p {
@@ -401,13 +438,13 @@ figure.effect-apollo h2 {
 
 figure.effect-apollo:hover img {
 	opacity: 0.6;
-	-webkit-transform: scale3d(1,1,1);
-	transform: scale3d(1,1,1);
+	-webkit-transform: scale3d(1, 1, 1);
+	transform: scale3d(1, 1, 1);
 }
 
 figure.effect-apollo:hover figcaption::before {
-	-webkit-transform: scale3d(1.9,1.4,1) rotate3d(0,0,1,45deg) translate3d(0,100%,0);
-	transform: scale3d(1.9,1.4,1) rotate3d(0,0,1,45deg) translate3d(0,100%,0);
+	-webkit-transform: scale3d(1.9, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, 100%, 0);
+	transform: scale3d(1.9, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, 100%, 0);
 }
 
 figure.effect-apollo:hover p {
@@ -417,7 +454,7 @@ figure.effect-apollo:hover p {
 }
 
 
-.project-swiper-img{
+.project-swiper-img {
 	// object-fit:contain;
 	// -webkit-background-size: cover;
 	// background-size: cover;
@@ -426,73 +463,110 @@ figure.effect-apollo:hover p {
 	// position: relative;
 	// transition: filter .5s ease-out;
 	// object-position: 0% center;
+	height: 25vw;
+@include mob{
+	height: 250px;
 }
-.project-swiper-cont{
+@include ipad{
+	height: 250px;
+}
+}
+
+.project-swiper-cont {
 	position: relative;
 	height: 100%;
+	width: 90%;
+	margin: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 }
-.project-swiper-p1,.project-swiper-p2,.project-swiper-h1{
-	
+
+.project-swiper-p1,
+.project-swiper-p2,
+.project-swiper-h1 {
+
 	position: absolute;
-	transform: translate(-50%,-20%);
-	opacity: 0; /* Start with opacity 0 */
+	transform: translate(-50%, -20%);
+	opacity: 0;
+	/* Start with opacity 0 */
 	transition-delay: 0s;
 	transition-duration: 0.5s;
 }
+
 @keyframes fadeInFromBottom {
 	0% {
-	  opacity: 0;
-	  transform: translate(-50%, -20%); /* Start at the bottom */
+		opacity: 0;
+		transform: translate(-50%, -20%);
+		/* Start at the bottom */
 	}
+
 	100% {
-	  opacity: 1;
-	  transform: translate(-50%, -50%); /* Move to the top */
+		opacity: 1;
+		transform: translate(-50%, -50%);
+		/* Move to the top */
 	}
-  }
-.project-swiper-p1{
+}
+
+.project-swiper-p1 {
 	top: 40%;
 	left: 50%;
-	
+
 }
-.project-swiper-h1{
+
+.project-swiper-h1 {
 	top: 45%;
 	left: 50%;
 	text-align: center;
 	font-weight: bold;
-	
+
 }
-.project-swiper-p2{
-	top: 55%;
+
+.project-swiper-p2 {
+	top: 60%;
 	left: 50%;
-	
-	
-	
+@include mob{
+	top: 55%;
 }
-.project-swiper-cont:hover{
-	.project-swiper-p1,.project-swiper-p2,.project-swiper-h1{
-	display: block;
-	opacity: 1;
-	transform: translate(-50%, -50%);
-	-webkit-transform: translate(-50%, -50%);
+
+
 }
-	.project-swiper-img{
-		filter: brightness(0.4) blur(2px) ;
-		
+
+.project-swiper-cont:hover {
+
+	.project-swiper-p1,
+	.project-swiper-p2,
+	.project-swiper-h1 {
+		display: block;
+		opacity: 1;
+		transform: translate(-50%, -50%);
+		-webkit-transform: translate(-50%, -50%);
+	}
+
+	.project-swiper-img {
+		filter: brightness(0.4) blur(2px);
+
 	}
 }
-.button-next-side ,.button-prev-side{
+
+.button-next-side,
+.button-prev-side {
 	--tw-backdrop-blur: blur(12px);
 	backdrop-filter: blur(12px);
-		border: 1px solid #040221;
-		padding: .5vw;
-		@include mob{
-			padding: 10px;
-		}
-		@include ipad{
-			padding: 10px;
-		}
+	border: 1px solid #040221;
+	padding: .5vw;
+
+	@include mob {
+		padding: 10px;
+	}
+
+	@include ipad {
+		padding: 10px;
+	}
 }
-.project-link{
+
+.project-link {
 	width: 25px;
 	height: 25px;
 	margin-right: 1rem;
@@ -500,73 +574,88 @@ figure.effect-apollo:hover p {
 	text-decoration: none;
 }
 
-.project-hub{
+.project-hub {
 	width: 25px;
 	height: 25px;
-	cursor: pointer;text-decoration: none;
-}
-.project-hub2{
-	width: 25px;
-	height: 25px;
-	cursor: not-allowed;text-decoration: none;
-}
-.project-href{
+	cursor: pointer;
 	text-decoration: none;
 }
-.projects-h1{
+
+.project-hub2 {
+	width: 25px;
+	height: 25px;
+	cursor: not-allowed;
+	text-decoration: none;
+}
+
+.project-href {
+	text-decoration: none;
+}
+
+.projects-h1 {
 	position: relative;
 	z-index: 9;
 	font-size: 4vw;
 	margin-bottom: 3vw;
 	transition: all 1s ease-out;
-	font-family:"Pacifico";
+	font-family: "Pacifico";
 
-	@include mob{
+	@include mob {
 		font-size: 50px;
 		margin-bottom: 50px;
 	}
-	@include ipad{
+
+	@include ipad {
 		font-size: 50px;
 		margin-bottom: 50px;
 	}
 }
-.swiper-size{
-	            animation: drop-up 2s ease 200ms backwards;
-				transition: 0.8s;
+
+.swiper-size {
+	animation: drop-up 2s ease 200ms backwards;
+	transition: 0.8s;
 }
+
 @keyframes drop-up {
-    from {
-     opacity: 0;
-     transform: translateY(200px);
-    }
-    to {
-     opacity: 1;
-     transform: translate(0px);
-    }
-   }
-   .swiper-forward{
+	from {
+		opacity: 0;
+		transform: translateY(200px);
+	}
+
+	to {
+		opacity: 1;
+		transform: translate(0px);
+	}
+}
+
+.swiper-forward {
 
 	width: 2vw;
 	height: 2vw;
-	@include mob{
+
+	@include mob {
 		width: 20px;
 		height: 20px;
 	}
-	@include ipad{
+
+	@include ipad {
 		width: 20px;
 		height: 20px;
 	}
-   }
-   .swiper-backward{
+}
+
+.swiper-backward {
 
 	width: 2vw;
 	height: 2vw;
-	@include mob{
+
+	@include mob {
 		width: 20px;
 		height: 20px;
 	}
-	@include ipad{
+
+	@include ipad {
 		width: 20px;
 		height: 20px;
 	}
-   }
+}
