--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -459,17 +459,21 @@ figure.effect-apollo:hover p {
 	// -webkit-background-size: cover;
 	// background-size: cover;
 	// background-position: center;
-	border-radius: 20px;
+	border-radius: 2vw;
 	// position: relative;
 	// transition: filter .5s ease-out;
 	// object-position: 0% center;
 	height: 25vw;
-@include mob{
-	height: 250px;
-}
-@include ipad{
-	height: 250px;
-}
+
+	@include mob {
+		height: 250px;
+		border-radius: 20px;
+	}
+
+	@include ipad {
+		height: 280px;
+		border-radius: 25px;
+	}
 }
 
 .project-swiper-cont {
@@ -520,15 +524,24 @@ figure.effect-apollo:hover p {
 	left: 50%;
 	text-align: center;
 	font-weight: bold;
+	font-size: 2vw;
 
+	@include mob {
+		font-size: 25px;
+	}
+
+	@include ipad {
+		font-size: 30px;
+	}
 }
 
 .project-swiper-p2 {
 	top: 60%;
 	left: 50%;
-@include mob{
-	top: 55%;
-}
+
+	@include mob {
+		top: 57%;
+	}
 
 
 }
@@ -567,25 +580,60 @@ figure.effect-apollo:hover p {
 }
 
 .project-link {
-	width: 25px;
-	height: 25px;
-	margin-right: 1rem;
+	width: 2vw;
+	height: 2vw;
+	margin-right: 1.5vw;
 	cursor: pointer;
 	text-decoration: none;
+
+	@include mob {
+		width: 25px;
+		height: 25px;
+		margin-right: 1rem;
+	}
+
+	@include ipad {
+		width: 25px;
+		height: 25px;
+		margin-right: 1rem;
+	}
 }
 
 .project-hub {
-	width: 25px;
-	height: 25px;
+	width: 2vw;
+	height: 2vw;
+	margin-right: 1.5vw;
 	cursor: pointer;
 	text-decoration: none;
+
+	@include mob {
+		width: 25px;
+		height: 25px;
+		margin-right: 1rem;
+	}
+
+	@include ipad {
+		width: 25px;
+		height: 25px;
+		margin-right: 1rem;
+	}
 }
 
 .project-hub2 {
-	width: 25px;
-	height: 25px;
+	width: 2vw;
+	height: 2vw;
 	cursor: not-allowed;
 	text-decoration: none;
+
+	@include mob {
+		width: 25px;
+		height: 25px;
+	}
+
+	@include ipad {
+		width: 25px;
+		height: 25px;
+	}
 }
 
 .project-href {
