--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -252,7 +252,7 @@
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: lightblue;
+  background-color: #fd565e;
   transition-duration: .25s;
 }
 
